[package]
name = "adventofcode-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
queues = "1.0.2"
# uint = "0.8"
# primitive-types = "0.12.1"
num-bigint = "0.4.3"

[dev-dependencies]
rusty-hook = "^0.11.2"
